Moved a few files around..
and removed old geocities crap.

--- a/mcr/index.html
+++ b/mcr/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <frameset framespacing="0" border="false" frameborder="0" cols="204,*">
-  <frame name="contents" target="main" src="nav.htm" scrolling="auto">
-  <frame name="main" src="main.htm" scrolling="auto">
+  <frame name="contents" target="main" src="nav.html" scrolling="auto">
+  <frame name="main" src="main.html" scrolling="auto">
 </frameset>
 </html>
