Redoing the styling for the index and Beulah pages
I intend to restyle the other cemeteries and cleanup their html soon.

--- a/mcr/Beulahc.html
+++ b/mcr/Beulahc.html
@@ -1,194 +1,183 @@
-<html>
+---
+layout: mcr_layout
+---
 
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-<title>Beulah Cemetery</title>
-</head>
+<div class="mcr-title">Beulah Cemetery</div>
 
-<body>
-<font SIZE="2">
-
-<p ALIGN="CENTER">Beulah Cemetery</p>
-
-<p ALIGN="CENTER">Malheur County, Oregon</p>
-
-<p ALIGN="CENTER">&nbsp;</p>
+<p>Malheur County, Oregon</p>
 
 <p>This cemetery is located approximately one mile north of Beulah reservoir on Bendire
 road, approximately 19 miles north of Juntura, Malheur County, Oregon. Location: T 19S R
-37E S 2. Records compiled by Grant and Sybil Higley.</font></p>
+37E S 2. Records compiled by Grant and Sybil Higley.</p>
 
-<table BORDER="1" CELLSPACING="1" CELLPADDING="7" WIDTH="590">
-  <tr>
-    <td WIDTH="18%"><font FACE="Arial" SIZE="2"><b>Last Name</b></font></td>
-    <td WIDTH="20%"><font FACE="Arial" SIZE="2"><b>First Name</b></font></td>
-    <td WIDTH="17%"><font FACE="Arial" SIZE="2"><b>Birth Date</b></font></td>
-    <td WIDTH="18%"><font FACE="Arial" SIZE="2"><b>Death Date</b></font></td>
-    <td WIDTH="26%"><font FACE="Arial" SIZE="2"><b>Other Information</b></font></td>
+<table class="mcr-cemeteryTable">
+  <tr class="mcr-cemeteryTable-titleRow">
+    <td>Last Name</td>
+    <td>First Name</td>
+    <td>Birth Date</td>
+    <td>Death Date</td>
+    <td>Other Information</td>
   </tr>
   <tr>
-    <td WIDTH="18%"><font SIZE="2">Cooley</font></td>
-    <td WIDTH="20%"><font SIZE="2">Bill</font></td>
-    <td WIDTH="17%">&nbsp;</td>
-    <td WIDTH="18%">&nbsp;</td>
-    <td WIDTH="26%"><font SIZE="2">rough sandstone</font></td>
+    <td>Cooley</td>
+    <td>Bill</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>rough sandstone</td>
   </tr>
   <tr>
-    <td WIDTH="18%"><font SIZE="2">Donald </font></td>
-    <td WIDTH="20%"><font SIZE="2">Infant Daughter</font></td>
-    <td WIDTH="17%">&nbsp;</td>
-    <td WIDTH="18%"><font SIZE="2">21 Oct 1912</font></td>
-    <td WIDTH="26%"><font SIZE="2">age 8 days--dau of Mr. &amp; Mrs. David M. Donald</font></td>
+    <td>Donald </td>
+    <td>Infant Daughter</td>
+    <td>&nbsp;</td>
+    <td>21 Oct 1912</td>
+    <td>age 8 days--dau of Mr. &amp; Mrs. David M. Donald</td>
   </tr>
   <tr>
-    <td WIDTH="18%"><font SIZE="2">Donald</font></td>
-    <td WIDTH="20%"><font SIZE="2">Infant Son</font></td>
-    <td WIDTH="17%">&nbsp;</td>
-    <td WIDTH="18%"><font SIZE="2">6 Feb 1911</font></td>
-    <td WIDTH="26%"><font SIZE="2">age 3 days--son of Mr &amp; Mrs. David M. Donald</font></td>
+    <td>Donald</td>
+    <td>Infant Son</td>
+    <td>&nbsp;</td>
+    <td>6 Feb 1911</td>
+    <td>age 3 days--son of Mr &amp; Mrs. David M. Donald</td>
   </tr>
   <tr>
-    <td WIDTH="18%"><font SIZE="2">Ewing</font></td>
-    <td WIDTH="20%"><font SIZE="2">Doc</font></td>
-    <td WIDTH="17%">&nbsp;</td>
-    <td WIDTH="18%">&nbsp;</td>
-    <td WIDTH="26%"><font SIZE="2">rough sandstone</font></td>
+    <td>Ewing</td>
+    <td>Doc</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>rough sandstone</td>
   </tr>
   <tr>
-    <td WIDTH="18%"><font SIZE="2">Grant</font></td>
-    <td WIDTH="20%"><font SIZE="2">William</font></td>
-    <td WIDTH="17%"><font SIZE="2">5 Mar 1843</font></td>
-    <td WIDTH="18%"><font SIZE="2">9 Jan 1908</font></td>
-    <td WIDTH="26%"><font SIZE="2">Sutherlandshire, Lairg</font></td>
+    <td>Grant</td>
+    <td>William</td>
+    <td>5 Mar 1843</td>
+    <td>9 Jan 1908</td>
+    <td>Sutherlandshire, Lairg</td>
   </tr>
   <tr>
-    <td WIDTH="18%"><font SIZE="2">Hay</font></td>
-    <td WIDTH="20%"><font SIZE="2">Robert B.</font></td>
-    <td WIDTH="17%"><font SIZE="2">1839</font></td>
-    <td WIDTH="18%"><font SIZE="2">1910</font></td>
-    <td WIDTH="26%">&nbsp;</td>
+    <td>Hay</td>
+    <td>Robert B.</td>
+    <td>1839</td>
+    <td>1910</td>
+    <td>&nbsp;</td>
   </tr>
   <tr>
-    <td WIDTH="18%"><font SIZE="2">Lavery</font></td>
-    <td WIDTH="20%"><font SIZE="2">Dan</font></td>
-    <td WIDTH="17%">&nbsp;</td>
-    <td WIDTH="18%">&nbsp;</td>
-    <td WIDTH="26%">&nbsp;</td>
+    <td>Lavery</td>
+    <td>Dan</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
   </tr>
   <tr>
-    <td WIDTH="18%"><font SIZE="2">Long</font></td>
-    <td WIDTH="20%"><font SIZE="2">Willie</font></td>
-    <td WIDTH="17%">&nbsp;</td>
-    <td WIDTH="18%">&nbsp;</td>
-    <td WIDTH="26%"><font SIZE="2">rough sandstone</font></td>
+    <td>Long</td>
+    <td>Willie</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>rough sandstone</td>
   </tr>
   <tr>
-    <td WIDTH="18%"><font SIZE="2">McLain</font></td>
-    <td WIDTH="20%"><font SIZE="2">Charles</font></td>
-    <td WIDTH="17%"><font SIZE="2">1819</font></td>
-    <td WIDTH="18%"><font SIZE="2">1900</font></td>
-    <td WIDTH="26%">&nbsp;</td>
+    <td>McLain</td>
+    <td>Charles</td>
+    <td>1819</td>
+    <td>1900</td>
+    <td>&nbsp;</td>
   </tr>
   <tr>
-    <td WIDTH="18%"><font SIZE="2">Scott</font></td>
-    <td WIDTH="20%"><font SIZE="2">Clara Bumson</font></td>
-    <td WIDTH="17%"><font SIZE="2">1859</font></td>
-    <td WIDTH="18%"><font SIZE="2">1932</font></td>
-    <td WIDTH="26%">&nbsp;</td>
+    <td>Scott</td>
+    <td>Clara Bumson</td>
+    <td>1859</td>
+    <td>1932</td>
+    <td>&nbsp;</td>
   </tr>
   <tr>
-    <td WIDTH="18%"><font SIZE="2">Scott</font></td>
-    <td WIDTH="20%"><font SIZE="2">Harry Lee</font></td>
-    <td WIDTH="17%">&nbsp;</td>
-    <td WIDTH="18%"><font SIZE="2">3 Oct 1893</font></td>
-    <td WIDTH="26%"><font SIZE="2">aged 11 mos 24 days-son of Mr. &amp; Mrs. R. L. Scott</font></td>
+    <td>Scott</td>
+    <td>Harry Lee</td>
+    <td>&nbsp;</td>
+    <td>3 Oct 1893</td>
+    <td>aged 11 mos 24 days-son of Mr. &amp; Mrs. R. L. Scott</td>
   </tr>
   <tr>
-    <td WIDTH="18%"><font SIZE="2">Scott</font></td>
-    <td WIDTH="20%"><font SIZE="2">John M.</font></td>
-    <td WIDTH="17%">&nbsp;</td>
-    <td WIDTH="18%"><font SIZE="2">22 Feb 1905</font></td>
-    <td WIDTH="26%"><font SIZE="2">77 yrs 7 mos 16 days</font></td>
+    <td>Scott</td>
+    <td>John M.</td>
+    <td>&nbsp;</td>
+    <td>22 Feb 1905</td>
+    <td>77 yrs 7 mos 16 days</td>
   </tr>
   <tr>
-    <td WIDTH="18%"><font SIZE="2">Scott</font></td>
-    <td WIDTH="20%"><font SIZE="2">Levi</font></td>
-    <td WIDTH="17%"><font SIZE="2">9 Feb 1797</font></td>
-    <td WIDTH="18%"><font SIZE="2">21 Apr 1890</font></td>
-    <td WIDTH="26%"><font SIZE="2">shared stone</font></td>
+    <td>Scott</td>
+    <td>Levi</td>
+    <td>9 Feb 1797</td>
+    <td>21 Apr 1890</td>
+    <td>shared stone</td>
   </tr>
   <tr>
-    <td WIDTH="18%"><font SIZE="2">Scott</font></td>
-    <td WIDTH="20%"><font SIZE="2">Levi W.</font></td>
-    <td WIDTH="17%"><font SIZE="2">15 Jun 1855</font></td>
-    <td WIDTH="18%"><font SIZE="2">4 Sep 1883</font></td>
-    <td WIDTH="26%"><font SIZE="2">shared stone</font></td>
+    <td>Scott</td>
+    <td>Levi W.</td>
+    <td>15 Jun 1855</td>
+    <td>4 Sep 1883</td>
+    <td>shared stone</td>
   </tr>
   <tr>
-    <td WIDTH="18%"><font SIZE="2">Scott</font></td>
-    <td WIDTH="20%"><font SIZE="2">Marion Winfield</font></td>
-    <td WIDTH="17%"><font SIZE="2">11 Sep 1861</font></td>
-    <td WIDTH="18%"><font SIZE="2">1 Jun 1953</font></td>
-    <td WIDTH="26%">&nbsp;</td>
+    <td>Scott</td>
+    <td>Marion Winfield</td>
+    <td>11 Sep 1861</td>
+    <td>1 Jun 1953</td>
+    <td>&nbsp;</td>
   </tr>
   <tr>
-    <td WIDTH="18%"><font SIZE="2">Shelton</font></td>
-    <td WIDTH="20%"><font SIZE="2">Nancy E. Scott</font></td>
-    <td WIDTH="17%">&nbsp;</td>
-    <td WIDTH="18%"><font SIZE="2">5 May 1904</font></td>
-    <td WIDTH="26%"><font SIZE="2">age 51 yrs 2 mos 24 days</font></td>
+    <td>Shelton</td>
+    <td>Nancy E. Scott</td>
+    <td>&nbsp;</td>
+    <td>5 May 1904</td>
+    <td>age 51 yrs 2 mos 24 days</td>
   </tr>
   <tr>
-    <td WIDTH="18%"><font SIZE="2">Stewart</font></td>
-    <td WIDTH="20%"><font SIZE="2">Catherine</font></td>
-    <td WIDTH="17%"><font SIZE="2">1886</font></td>
-    <td WIDTH="18%"><font SIZE="2">1915</font></td>
-    <td WIDTH="26%">&nbsp;</td>
+    <td>Stewart</td>
+    <td>Catherine</td>
+    <td>1886</td>
+    <td>1915</td>
+    <td>&nbsp;</td>
   </tr>
   <tr>
-    <td WIDTH="18%"><font SIZE="2">Sutherland</font></td>
-    <td WIDTH="20%"><font SIZE="2">Hannah M.</font></td>
-    <td WIDTH="17%"><font SIZE="2">1840</font></td>
-    <td WIDTH="18%"><font SIZE="2">1924</font></td>
-    <td WIDTH="26%">&nbsp;</td>
+    <td>Sutherland</td>
+    <td>Hannah M.</td>
+    <td>1840</td>
+    <td>1924</td>
+    <td>&nbsp;</td>
   </tr>
   <tr>
-    <td WIDTH="18%"><font SIZE="2">Thompson</font></td>
-    <td WIDTH="20%"><font SIZE="2">Elias</font></td>
-    <td WIDTH="17%"><font SIZE="2">1855</font></td>
-    <td WIDTH="18%"><font SIZE="2">16 Feb 1934</font></td>
-    <td WIDTH="26%"><font SIZE="2">78 yrs 9 mos 16 days</font></td>
+    <td>Thompson</td>
+    <td>Elias</td>
+    <td>1855</td>
+    <td>16 Feb 1934</td>
+    <td>78 yrs 9 mos 16 days</td>
   </tr>
   <tr>
-    <td WIDTH="18%"><font SIZE="2">Thompson</font></td>
-    <td WIDTH="20%"><font SIZE="2">Jesse</font></td>
-    <td WIDTH="17%"><font SIZE="2">1852</font></td>
-    <td WIDTH="18%"><font SIZE="2">1912</font></td>
-    <td WIDTH="26%">&nbsp;</td>
+    <td>Thompson</td>
+    <td>Jesse</td>
+    <td>1852</td>
+    <td>1912</td>
+    <td>&nbsp;</td>
   </tr>
   <tr>
-    <td WIDTH="18%"><font SIZE="2">Wilson</font></td>
-    <td WIDTH="20%"><font SIZE="2">Infant</font></td>
-    <td WIDTH="17%"><font SIZE="2">aged 5 days</font></td>
-    <td WIDTH="18%">&nbsp;</td>
-    <td WIDTH="26%"><font SIZE="2">Son of Levi &amp; Ada Wilson</font></td>
+    <td>Wilson</td>
+    <td>Infant</td>
+    <td>aged 5 days</td>
+    <td>&nbsp;</td>
+    <td>Son of Levi &amp; Ada Wilson</td>
   </tr>
   <tr>
-    <td WIDTH="18%"><font SIZE="2">Wilson</font></td>
-    <td WIDTH="20%"><font SIZE="2">Leah</font></td>
-    <td WIDTH="17%">&nbsp;</td>
-    <td WIDTH="18%"><font SIZE="2">17 Oct 1902</font></td>
-    <td WIDTH="26%"><font SIZE="2">age 2 yrs 7 mos 15 days</font></td>
+    <td>Wilson</td>
+    <td>Leah</td>
+    <td>&nbsp;</td>
+    <td>17 Oct 1902</td>
+    <td>age 2 yrs 7 mos 15 days</td>
   </tr>
   <tr>
-    <td WIDTH="18%"><font SIZE="2">Wilson</font></td>
-    <td WIDTH="20%"><font SIZE="2">Lelah</font></td>
-    <td WIDTH="17%">&nbsp;</td>
-    <td WIDTH="18%">&nbsp;</td>
-    <td WIDTH="26%"><font SIZE="2">rough, broken stone</font></td>
+    <td>Wilson</td>
+    <td>Lelah</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>rough, broken stone</td>
   </tr>
 </table>
 
-<p>&nbsp;</p>
-</body>
-</html>
